--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
+    ext.retrofit_version = '2.3.0'
+    ext.rx_version = '2.0.1'
+
     repositories {
         google()
         jcenter()
