--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,10 @@ dependencies {
     // rxandroid
     implementation "io.reactivex.rxjava2:rxandroid:$rx_version"
 
+    implementation 'com.squareup.moshi:moshi:1.4.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
+
+    implementation "com.squareup.okhttp3:logging-interceptor:3.8.1"
+    implementation "com.squareup.okhttp3:okhttp:3.8.1"
+
 }
